v1.8.2 (2023-XX-XX)
===================

v1.8.1 (2022-10-31)
===================

- Changed estimateDeltaStaeckel to by default return delta0=1e-6 when
  delta<delta0, because giving delta=0 to an actionAngleStaeckel instance
  does not work.

- Added pre-commit hooks. Many changes to all files for imports, code style,
  spelling, etc.

- Added dependabot alerts to keep GitHub Actions dependencies up to date.

- Added Python 3.11 wheels for all major platforms. Added Python >=3.8 wheels
  for arm64 Macs (M1s)

- Switched to using cibuildwheel to build Linux, Mac (incl. M1/arm64), and
  Windows wheels.

- Switched to using pyodide-build to build the pyodide wheel.

v1.8.0 (2022-07-04)
===================

- Added the particle-spray model galpy.df.streamspraydf that was
  previously part of the jobovy/streamtools package (#479).

- Added necessary derivatives to allow spherical DFs to be constructed using
  PowerSphericalPotentialwCutoff and PlummerPotential.

- Updated existing and added new phase-space positions for MW satellite
  galaxies from Pace et al. (2022; 2205.05699). Also add uncertainties
  (#484 by Anya Dovgal).

- Updated existing and added new phase-space positions for MW globular clusters
  from Baumgardt et al. (2019; 1811.01507),
  Vasiliev & Baumgardt (2021; 2102.09568), and
  Baumgardt & Vasiliev (2021; 2105.09526). Also add uncertainties
  (#485 by Anya Dovgal).

- Added SCFPotential.from_density to directly initialize an SCFPotential based
  on a density function. Allows for full correct and consistent handling of
  Quantity inputs and outputs.

- Renamed phiforce --> phitorque everywhere (including
  potential.evaluatephiforces and potential.evaluateplanarphiforces), such that
  the method's name actually reflect what it returns (a torque, not a force).
  phiforce will be fully removed in version 1.9 and may later be re-used
  for the actual phi component of the force, so switch to the new name now.
