@@ -158,22 +158,6 @@ jobs:
             REQUIRES_ASTROQUERY: true
             REQUIRES_NUMBA: false
             REQUIRES_JAX: false
-          - os: ubuntu-latest
-            python-version: 3.7
-            TEST_FILES: tests/test_orbit.py -k test_energy_jacobi_conservation
-            REQUIRES_PYNBODY: true
-            REQUIRES_ASTROPY: true
-            REQUIRES_ASTROQUERY: true
-            REQUIRES_NUMBA: false
-            REQUIRES_JAX: false
-          - os: ubuntu-latest
-            python-version: 3.7
-            TEST_FILES: tests/test_orbit.py tests/test_orbits.py -k 'not test_energy_jacobi_conservation'
-            REQUIRES_PYNBODY: true
-            REQUIRES_ASTROPY: true
-            REQUIRES_ASTROQUERY: true
-            REQUIRES_NUMBA: false
-            REQUIRES_JAX: false
           - os: macos-latest
             python-version: "3.10"
             TEST_FILES: tests/test_orbit.py -k test_energy_jacobi_conservation
