@@ -1,6 +1,12 @@
 v1.8.2 (2023-XX-XX)
 ===================
 
+- Made the potential input explicitly positional-only for all galpy.potential
+  functions to avoid errors when specifying it as a keyword argument.
+
+- Dropped Python 3.7 support (to allow required positional-only arguments
+  using PEP 570).
+
 v1.8.1 (2022-10-31)
 ===================
 
